<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/subscribed_channels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="17dp"
        android:id="@+id/textView8" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/listViewChannels" />

    <Button
        android:text="@string/addmore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addMoreButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addMoreButton"
        android:layout_alignLeft="@+id/addMoreButton"
        android:layout_alignStart="@+id/addMoreButton"
        android:id="@+id/DoneButton" />

</RelativeLayout>
