<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_channel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.group16.chitchat.ChannelActivity">

    <TextView
        android:text="@string/subscribed_channels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="17dp"
        android:id="@+id/textView8" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/listViewChannels" />

    <Button
        android:text="@string/addmore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addMoreButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="addMore"/>

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DoneButton"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/addMoreButton"
        android:layout_alignEnd="@+id/addMoreButton" />

</RelativeLayout>
